# EPP-NSV

./: CHANGELOG.md  CITATION.cff  CODE_ALIGNMENT_REPORT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
data/governed/: README.md
data/synthetic/: README.md
docs/: ARTICLE_ALIGNMENT.md  CONTROLLED_STUDY.md  DATA_SCHEMA.md  EXPERIMENTS.md  MUTATION_TESTING.md  RELEASE_CHECKLIST.md  SEMANTIC_LIFTING_CONTRACT.md  VALIDATION.md  architecture.mmd
docs/templates/: adjudications.schema.csv  episodes.schema.csv  pair_reference.schema.csv
outputs/: article_revision_multiseed_summary.json
outputs/article_revision_seed17/: ablation_summary.csv  environment.json  fixture_manifest.json  fixtures.jsonl  generated_table.tex  metrics.json  pair_predictions.csv  policy_manifest.json  policy_version_perturbation.jsonl  report.md  run_manifest.json  run_metadata.json
paper/: ARTICLE_SCOPE_NOTE.md  README.md  V1.tex  bibliography.bib
paper/figures/: workflow_source.py
scripts/: run_smoke.sh
src/epp_nsv/: __init__.py  adjudication.py  baselines.py  controlled.py  experiments.py  independent_oracle.py  metrics.py  models.py  mutation.py  normalization.py  policy.py  semantic_lifting.py  synthetic.py  verifier.py
tests/: conftest.py  test_adjudication.py  test_controlled.py  test_experiment_smoke.py  test_mutation.py  test_normalization.py  test_verifier.py
