[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epp-nsv-bioarc"
version = "0.3.1"
description = "Research-only prototype for decision-scoped patient-state equivalence with synthetic verification fixtures."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Mohammad Tanhaei"}
]
keywords = ["clinical decision support", "neuro-symbolic AI", "SMT", "ophthalmology", "EHR"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "z3-solver>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
epp-nsv-experiment = "epp_nsv.experiments:main"
epp-nsv-controlled = "epp_nsv.controlled:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
